--- a/package.json
+++ b/package.json
@@ -3,19 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.0.0",
+    "@reach/router": "^1.3.4",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "autoprefixer": "^9",
+    "babel-eslint": "^10.1.0",
+    "postcss": "^7",
+    "postcss-preset-env": "^6.7.0",
     "react": "^17.0.1",
+    "react-aria": "^3.3.0",
     "react-dom": "^17.0.1",
+    "react-intl": "^5.10.9",
     "react-scripts": "4.0.1",
+    "react-stately": "^3.2.0",
+    "react-use": "^15.3.4",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "use-persisted-state": "^0.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +46,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.16.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.0",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.0.0",
+    "prettier": "^2.2.1",
+    "stylelint-config-recommended": "^3.0.0"
   }
 }
