--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,12 @@
   "prettier.packageManager": "yarn",
   "prettier.singleQuote": true,
   "prettier.semi": false,
-  "prettier.trailingComma": "all"
+  "prettier.trailingComma": "all",
+  "tailwindCSS.experimental.classRegex": [
+    "tw`([^`]*)", // tw`...`
+    "tw=\"([^\"]*)", // <div tw="..." />
+    "tw={\"([^\"}]*)", // <div tw={"..."} />
+    "tw\\.\\w+`([^`]*)", // tw.xxx`...`
+    "tw(.*?)`([^`]*)" // tw(Component)`...`
+  ]
 }
