--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-scripts": "4.0.1",
     "react-stately": "^3.2.0",
     "react-use": "^15.3.4",
+    "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
     "web-vitals": "^0.2.4"
   },
