--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 BROWSER=none
+REACT_APP_GITHUB_API_URL=https://api.github.com
+REACT_APP_GITHUB_CLIENT_ID=14b6035ec5dc6a8c98d0
+REACT_APP_GITHUB_CLIENT_SECRET=9e1f063d60df7dadea6a7a93f241539982154a00
+REACT_APP_GITHUB_REDIRECT_URI=http://localhost:3000/auth/github
+REACT_APP_GITHUB_AUTH_URL=https://github.com/login/oauth/authorize
