--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
+    "axios-auth-refresh": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "js-cookie": "^2.2.1",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
+    "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-aria": "^3.3.0",
     "react-dom": "^17.0.1",
