--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,6 +1,8 @@
 {
   "extends": "stylelint-config-recommended",
   "rules": {
+    "selector-pseudo-class-no-unknown": null,
+    "selector-type-no-unknown": null,
     "at-rule-no-unknown": [ true, {
       "ignoreAtRules": [
         "extends",
