--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.0.0",
     "@reach/router": "^1.3.4",
+    "@tabler/icons": "^1.38.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -14,18 +15,21 @@
     "axios-auth-refresh": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "js-cookie": "^2.2.1",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-aria": "^3.3.0",
+    "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.1",
-    "react-intl": "^5.10.9",
+    "react-intl": "^5.10.14",
     "react-scripts": "4.0.1",
     "react-stately": "^3.2.0",
     "react-use": "^15.3.4",
     "styled-components": "^5.2.1",
+    "swr": "^0.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
