--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 BROWSER=none
+API_PROXY_TARGET=http://localhost:5000
 REACT_APP_PUBLIC_URL=http://localhost:3000
-REACT_APP_GITHUB_API_URL=https://api.github.com
+REACT_APP_GITHUB_API_URL=http://localhost:3000/proxy/github
 REACT_APP_GITHUB_CLIENT_ID=14b6035ec5dc6a8c98d0
 REACT_APP_GITHUB_CLIENT_SECRET=9e1f063d60df7dadea6a7a93f241539982154a00
 REACT_APP_GITHUB_REDIRECT_URI=http://localhost:3000/auth/github
 REACT_APP_GITHUB_AUTH_URL=https://github.com/login/oauth/authorize
-REACT_APP_GITHUB_TOKEN_URL=https://github.com/login/oauth/access_token
+REACT_APP_GITHUB_TOKEN_URL=/login/oauth/access_token
