--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-aria": "^3.3.0",
     "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.1",
+    "react-form": "^4.0.1",
     "react-intl": "^5.10.14",
     "react-scripts": "4.0.1",
     "react-stately": "^3.2.0",
