--- a/package.json
+++ b/package.json
@@ -29,11 +29,12 @@
     "react-dom": "^17.0.1",
     "react-form": "^4.0.1",
     "react-intl": "^5.10.14",
+    "react-query": "^3.9.8",
     "react-scripts": "4.0.1",
     "react-stately": "^3.2.0",
     "react-use": "^15.3.4",
+    "react-virtualized": "^9.22.3",
     "styled-components": "^5.2.1",
-    "swr": "^0.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
