--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
+    "valtio": "^0.7.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
