--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-use": "^15.3.4",
     "react-virtualized": "^9.22.3",
     "styled-components": "^5.2.1",
+    "styled-map": "^3.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
