--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.0.0",
     "babel-eslint": "^10.1.0",
-    "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "fastify": "^3.9.2",
     "fastify-http-proxy": "^4.2.0",
+    "firebase": "^8.2.9",
     "http-proxy-middleware": "^1.0.6",
+    "jotai": "^0.15.0",
     "js-cookie": "^2.2.1",
+    "lockr": "^0.8.5",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.9.4",
@@ -27,7 +29,7 @@
     "react-aria": "^3.3.0",
     "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.1",
-    "react-form": "^4.0.1",
+    "react-hook-form": "^6.15.4",
     "react-intl": "^5.10.14",
     "react-query": "^3.9.8",
     "react-scripts": "4.0.1",
@@ -39,7 +41,6 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
     "use-persisted-state": "^0.3.3",
-    "valtio": "^0.7.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
