--- a/.env
+++ b/.env
@@ -1,8 +1,16 @@
 BROWSER=none
 API_PROXY_TARGET=http://localhost:5000
 REACT_APP_PUBLIC_URL=http://localhost:3000
-REACT_APP_AUTH0_CLIENT_ID=bNJP120AZH6U6Dh1bE71aZbwTapkBuDS
-REACT_APP_AUTH0_DOMAIN=dev-7sqoteuw.us.auth0.com
+
+REACT_APP_FIREBASE_API_KEY=AIzaSyB9VnwN8hQt3e3GPf9M5WYzL32E-Gp8amA
+REACT_APP_FIREBASE_AUTH_DOMAIN=my-test-project-83512.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://my-test-project-83512.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=my-test-project-83512
+REACT_APP_FIREBASE_STORAGE_BUCKET=my-test-project-83512.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=449285810566
+REACT_APP_FIREBASE_APP_ID=1:449285810566:web:ce395f9f2c70cb4033e407
+
+
 REACT_APP_GITHUB_API_URL=http://localhost:3000/proxy/github
 REACT_APP_GITHUB_CLIENT_ID=14b6035ec5dc6a8c98d0
 REACT_APP_GITHUB_CLIENT_SECRET=9e1f063d60df7dadea6a7a93f241539982154a00
