adding some components

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.0.0",
-    "@reach/router": "^1.3.4",
+    "@d2k/react-localstorage": "^1.1.3",
     "@tabler/icons": "^1.38.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -17,30 +17,31 @@
     "clsx": "^1.1.1",
     "fastify": "^3.9.2",
     "fastify-http-proxy": "^4.2.0",
-    "firebase": "^8.2.9",
     "http-proxy-middleware": "^1.0.6",
     "jotai": "^0.15.0",
-    "js-cookie": "^2.2.1",
-    "lockr": "^0.8.5",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
     "react-aria": "^3.3.0",
+    "react-base-table": "^1.12.0",
     "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-intl": "^5.10.14",
     "react-query": "^3.9.8",
+    "react-router-dom": "^5.2.0",
+    "react-screentype-hook": "^1.0.17",
     "react-scripts": "4.0.1",
     "react-stately": "^3.2.0",
     "react-use": "^15.3.4",
-    "react-virtualized": "^9.22.3",
+    "react-use-calendar": "^1.0.0",
+    "react-useportal": "^1.0.14",
+    "react-window": "^1.8.6",
     "styled-components": "^5.2.1",
     "styled-map": "^3.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.0.7",
-    "use-persisted-state": "^0.3.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
