--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,6 @@
   "javascript.suggestionActions.enabled": false,
   "prettier.arrowParens": "avoid",
   "prettier.jsxSingleQuote": true,
-  "prettier.packageManager": "yarn",
   "prettier.singleQuote": true,
   "prettier.semi": false,
   "prettier.trailingComma": "all",
@@ -13,6 +12,8 @@
     "tw`([^`]*)", // tw`...`
     "tw=\"([^\"]*)", // <div tw="..." />
     "tw={\"([^\"}]*)", // <div tw={"..."} />
+    "tw='([^']*)", // <div tw="..." />
+    "tw={'([^'}]*)", // <div tw={"..."} />
     "tw\\.\\w+`([^`]*)", // tw.xxx`...`
     "tw(.*?)`([^`]*)" // tw(Component)`...`
   ]
