--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@craco/craco": "^6.0.0",
     "@d2k/react-localstorage": "^1.1.3",
+    "@headlessui/react": "^0.3.2",
     "@tabler/icons": "^1.38.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
@@ -23,7 +24,6 @@
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.9.4",
     "react": "^17.0.1",
-    "react-aria": "^3.3.0",
     "react-base-table": "^1.12.0",
     "react-block-ui": "^1.3.3",
     "react-dom": "^17.0.1",
@@ -33,7 +33,7 @@
     "react-router-dom": "^5.2.0",
     "react-screentype-hook": "^1.0.17",
     "react-scripts": "4.0.1",
-    "react-stately": "^3.2.0",
+    "react-select": "^4.3.0",
     "react-use": "^15.3.4",
     "react-use-calendar": "^1.0.0",
     "react-useportal": "^1.0.14",
