--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 .env.test.local
 .env.production.local
 
+# debug log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# cache
+.cache
+.eslintcache
