--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-base-table": "^1.12.0",
     "react-block-ui": "^1.3.3",
+    "react-date-picker": "^8.1.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-intl": "^5.10.14",
