--- a/package.json
+++ b/package.json
@@ -3,47 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^6.0.0",
+    "@craco/craco": "^6.1.1",
     "@d2k/react-localstorage": "^1.1.3",
+    "@draft-js-plugins/editor": "^4.1.0",
+    "@draft-js-plugins/inline-toolbar": "^4.1.1",
     "@headlessui/react": "^0.3.2",
-    "@tabler/icons": "^1.38.1",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@tabler/icons": "^1.39.1",
+    "@tailwindcss/postcss7-compat": "^2.1.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^13.1.2",
     "autoprefixer": "^9",
-    "axios": "^0.21.1",
-    "axios-auth-refresh": "^3.0.0",
-    "babel-eslint": "^10.1.0",
+    "axios-auth-refresh": "^3.1.0",
     "clsx": "^1.1.1",
-    "fastify": "^3.9.2",
-    "fastify-http-proxy": "^4.2.0",
-    "http-proxy-middleware": "^1.0.6",
-    "jotai": "^0.15.0",
+    "draft-js": "^0.11.7",
+    "jotai": "^0.16.0",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
-    "qs": "^6.9.4",
-    "react": "^17.0.1",
+    "qs": "^6.10.1",
+    "react": "^17.0.2",
     "react-base-table": "^1.12.0",
-    "react-block-ui": "^1.3.3",
-    "react-date-picker": "^8.1.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^6.15.4",
-    "react-intl": "^5.10.14",
-    "react-query": "^3.9.8",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.0.7",
+    "react-intl": "^5.15.8",
+    "react-query": "^3.13.6",
     "react-router-dom": "^5.2.0",
     "react-screentype-hook": "^1.0.17",
-    "react-scripts": "4.0.1",
-    "react-select": "^4.3.0",
-    "react-use": "^15.3.4",
+    "react-scripts": "^4.0.3",
+    "react-use": "^17.2.3",
     "react-use-calendar": "^1.0.0",
     "react-useportal": "^1.0.14",
     "react-window": "^1.8.6",
-    "styled-components": "^5.2.1",
+    "styled-components": "^5.2.3",
     "styled-map": "^3.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "twin.macro": "^2.0.7",
-    "web-vitals": "^0.2.4"
+    "twin.macro": "^2.3.2"
   },
   "scripts": {
     "server": "node ./src/server",
@@ -70,14 +64,12 @@
     ]
   },
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/preset-flow": "^7.12.1",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.15",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.0",
-    "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "4.0.0",
     "prettier": "^2.2.1",
     "stylelint-config-recommended": "^3.0.0"
