--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@d2k/react-localstorage": "^1.1.3",
+    "@draft-js-plugins/anchor": "^4.1.2",
+    "@draft-js-plugins/buttons": "^4.1.0",
     "@draft-js-plugins/editor": "^4.1.0",
     "@draft-js-plugins/inline-toolbar": "^4.1.1",
+    "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@headlessui/react": "^0.3.2",
     "@tabler/icons": "^1.39.1",
     "@tailwindcss/postcss7-compat": "^2.1.0",
+    "@tailwindcss/typography": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.2",
@@ -34,6 +38,7 @@
     "react-use-calendar": "^1.0.0",
     "react-useportal": "^1.0.14",
     "react-window": "^1.8.6",
+    "rich-markdown-editor": "^11.6.4",
     "styled-components": "^5.2.3",
     "styled-map": "^3.3.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
