--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "draft-js": "^0.11.7",
     "jotai": "^0.16.0",
+    "nanoid": "^3.1.22",
     "postcss": "^7",
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.10.1",
