--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.2",
     "autoprefixer": "^9",
+    "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
     "clsx": "^1.1.1",
     "draft-js": "^0.11.7",
