--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-base-table": "^1.12.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.7",
+    "react-hot-toast": "^1.0.2",
     "react-intl": "^5.15.8",
     "react-query": "^3.13.6",
     "react-router-dom": "^5.2.0",
