--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@headlessui/react": "^1.0.0",
     "@tabler/icons": "^1.39.1",
+    "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.1.0",
     "@tailwindcss/typography": "^0.4.0",
     "@testing-library/jest-dom": "^5.11.10",
