--- a/package.json
+++ b/package.json
@@ -4,12 +4,6 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
-    "@d2k/react-localstorage": "^1.1.3",
-    "@draft-js-plugins/anchor": "^4.1.2",
-    "@draft-js-plugins/buttons": "^4.1.0",
-    "@draft-js-plugins/editor": "^4.1.0",
-    "@draft-js-plugins/inline-toolbar": "^4.1.1",
-    "@draft-js-plugins/side-toolbar": "^4.1.0",
     "@headlessui/react": "^1.0.0",
     "@tabler/icons": "^1.39.1",
     "@tailwindcss/line-clamp": "^0.2.0",
@@ -22,7 +16,10 @@
     "axios": "^0.21.1",
     "axios-auth-refresh": "^3.1.0",
     "clsx": "^1.1.1",
-    "draft-js": "^0.11.7",
+    "dotenv": "^9.0.0",
+    "fastify": "^3.15.1",
+    "fastify-http-proxy": "^5.0.0",
+    "http-proxy-middleware": "^2.0.0",
     "jotai": "^0.16.3",
     "lodash": "^4.17.21",
     "nanoid": "^3.1.22",
@@ -30,32 +27,31 @@
     "postcss-preset-env": "^6.7.0",
     "qs": "^6.10.1",
     "react": "^17.0.2",
-    "react-base-table": "^1.12.0",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.0.7",
     "react-hot-toast": "^1.0.2",
     "react-intl": "^5.15.8",
-    "react-query": "^3.13.6",
     "react-router-dom": "^5.2.0",
     "react-screentype-hook": "^1.0.17",
     "react-scripts": "^4.0.3",
-    "react-table": "^7.6.3",
     "react-use": "^17.2.3",
     "react-use-calendar": "^1.0.0",
     "react-useportal": "^1.0.14",
-    "react-window": "^1.8.6",
     "rich-markdown-editor": "^11.6.4",
     "styled-components": "^5.2.3",
     "styled-map": "^3.3.0",
+    "swr": "^0.5.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "twin.macro": "^2.3.2"
   },
   "scripts": {
+    "dev": "run-p server start",
     "server": "node ./src/server",
     "start": "craco start",
     "build": "craco build",
     "test": "craco test"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -82,6 +78,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react-hooks": "4.0.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "stylelint-config-recommended": "^3.0.0"
   }
