--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@craco/craco": "^6.1.1",
     "@headlessui/react": "^1.0.0",
+    "@mgcrea/fastify-request-logger": "^0.5.2",
+    "@prisma/client": "2.22.1",
     "@tabler/icons": "^1.39.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.1.0",
@@ -17,8 +19,11 @@
     "axios-auth-refresh": "^3.1.0",
     "clsx": "^1.1.1",
     "dotenv": "^9.0.0",
-    "fastify": "^3.15.1",
+    "fastify": "^3.0.0",
+    "fastify-accepts": "^2.0.1",
     "fastify-http-proxy": "^5.0.0",
+    "fastify-qs": "^3.0.0",
+    "fastify-sensible": "^3.1.0",
     "http-proxy-middleware": "^2.0.0",
     "jotai": "^0.16.3",
     "lodash": "^4.17.21",
@@ -42,14 +47,19 @@
     "styled-map": "^3.3.0",
     "swr": "^0.5.6",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "twin.macro": "^2.3.2"
+    "twin.macro": "^2.3.2",
+    "fastify-plugin": "^3.0.0",
+    "fastify-autoload": "^3.3.1",
+    "fastify-cli": "^2.11.0"
   },
   "scripts": {
-    "dev": "run-p server start",
-    "server": "node ./src/server",
+    "dev": "run-p dev:server start",
+    "dev:server": "fastify start -w -l info -P app.js -p 5000",
     "start": "craco start",
+    "start:server": "fastify start -l info app.js",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "test:server": "tap \"test/**/*.test.js\""
   },
   "proxy": "http://localhost:5000",
   "eslintConfig": {
@@ -80,6 +90,22 @@
     "eslint-plugin-react-hooks": "4.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
-    "stylelint-config-recommended": "^3.0.0"
-  }
+    "prisma": "2.22.1",
+    "tap": "^14.11.0"
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/datnq/cra-tailwind.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/datnq/cra-tailwind/issues"
+  },
+  "homepage": "https://github.com/datnq/cra-tailwind#readme"
 }
